[project]
name = "robot-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.workspace]
members = [
    "Lab3",
]
